
--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3l
------------
* Fixed a few Cale related bugs.
* Fixed an error in lust gain that was causing unintentional massive lust spikes.
* Fixed an error where nasty Miranda wouldn't let you through the main gate, even if you had a pass.
* Fixed inn companion prompt.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3k2
-------------
* Fixing various bugs and missing tags in Cale.
* Fixed a but in Kiakai's anal catch scene.
* Tweaked the output of Cavalcade a bit.
* Better pics for Kiakai.
* The "new" Miranda stuff added in Version 0.3k should be available for nasty Miranda too (note that take home doesn't have any scenes yet).

Version 0.3k
------------
* Fixed various typos and minor bugs caused by me changing stuff in the backend.
* Added some sex exp/stat calls that were missing.
* You can now visit Miranda's home for sexings during the hunting for Terry quest.
* You can now repeat the Miranda sex scenes played during the planning stage of Terry's quest (ask her to go to the back room in the tavern).
* Fixed Terry's apparent gender confusion.
* Terry and Miranda's stats/equipment and jobs are now saved.
* Fixed various flags for lei and twins that were causing bugs or inconsistencies.
* Poked around with the button art in order to make it more readable. In the end, I repainted them in a flatter, simpler style.
* Added a few new items to debug.
* Rogue job added. Pending balance. Terry has it by default (and will be able to teach it later), but for now, you'll have to find a different way to learn it (and there is one available).
* Bruiser job added. Pending balance. Miranda has it by default (and will be able to teach it later), but for now, it is locked for the player.